--- a/integration-tests/Dockerfile.development
+++ b/integration-tests/Dockerfile.development
@@ -10,6 +10,13 @@ RUN \
   rm -rf /var/lib/apt/lists/* && \
   rm -rf /var/cache/oracle-jdk8-installer
 
+# Install sbt manually
+COPY ./project/build.properties /myapp/project/build.properties
+RUN eval $(sed s/sbt.version/SBT_VERSION/ </myapp/project/build.properties) && \
+    mkdir -p /usr/local/bin && \
+    wget -P /usr/local/bin/ https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/$SBT_VERSION/sbt-launch.jar
+COPY project/sbt /usr/local/bin/
+RUN chmod +x /usr/local/bin/sbt
 
 # Define working directory.
 WORKDIR /myapp
