[docker] update dockerfile.ubuntu-tools

--- a/docker/Dockerfile.ubuntu-tools
+++ b/docker/Dockerfile.ubuntu-tools
@@ -7,4 +7,5 @@ RUN apt-get update &&  \
       curl             \
       iputils-ping     \
       net-tools        \
+      dnsutils         \
       python
