--- a/docker/Dockerfile.alpine-python-dev
+++ b/docker/Dockerfile.alpine-python-dev
@@ -3,3 +3,7 @@ FROM python:3.6-alpine3.6
 RUN apk add --update --no-cache g++ linux-headers make musl-dev python3-dev
 RUN pip install grpcio
 RUN apk del g++ linux-headers make musl-dev python3-dev
+
+# alternatively see
+# https://forum.alpinelinux.org/forum/general-discussion/gcc-stdioh-no-such-file-or-directory
+RUN apk add build-base
