--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -1,3 +1,3 @@
 FROM alpine
 
-RUN apk add --update bash curl && rm -rf /var/cache/apk/*
+RUN apk add --update bash curl iproute2 && rm -rf /var/cache/apk/*
