--- a/hello-alpakka/src/main/resources/application.conf
+++ b/hello-alpakka/src/main/resources/application.conf
@@ -56,12 +56,22 @@ akka.kafka.consumer {
     #  with a frequency controlled by the config auto.commit.interval.ms.
     enable.auto.commit = true
 
-    #bootstrap.servers = "localhost:9092"
-    group.id = "test-group1"
+    bootstrap.servers = ${BROKER_URLS}
+    topic = ${TOPIC}
+    group.id = ${GROUP_ID}
 
     auto.offset.reset = "earliest"
   }
 
   # Time to wait for pending requests when a partition is closed
   # wait-close-partition = 500ms
+}
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  loglevel=off
+  stdout-loglevel=off
+  log-dead-letters=off
+  log-dead-letters-during-shutdown=false
 }
