--- a/rust/by-example/Cargo.toml
+++ b/rust/by-example/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4"
+tokio = { version = "1.48", features = ["full"] }
+once_cell = "1.21"
+tracing = "0.1"
+tracing-subscriber = "0.3"
